// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inspectObjectCore Basic types 1`] = `
Object {
  "anys": "any[]",
  "fn": "(x: boolean) => number",
  "id": "<T>(x: T) => T",
  "record": "{ [x: number]: string; }",
  "str": "string",
}
`;

exports[`inspectObjectCore Import 1`] = `
Object {
  "res": "(typeMap: Record<string, string>) => { [x: string]: string; }",
}
`;

exports[`inspectObjectCore Preamble 1`] = `
Object {
  "res": "number & string",
}
`;

exports[`inspectObjectCore Self-reference 1`] = `
Object {
  "a": "string",
  "b": "string | Promise<string>",
}
`;
